--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1"><span class="text-body-secondary">اللي ميعرفش معني .... يبقي مخدش عند الدكتور .....اي</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1"><span class="text-body-secondary">اللي ميعرفش معني ايزي يبقي مخدش عند الدكتور انجليزي</span></h2>
         <p class="lead">مفيش حاجة صعبة ولا حاجة مستحيلة فقط انها الأرادة فاستعن بالله ولاتعجز وافرح بقدر الله لك ؛ وتفائل بالحياة تدرك كل ما تتمني ؛ابتسم ثم ابتسم وابتسم لأن في الابتسامة مفتاح لكل مغلق وتيسر لكل عسر وزوال لكل هم يكفيك ان تبتسم ربك هو الله</p>
       </div>
       <div class="col-md-5 order-md-1">
