--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
 <p>&copy; Developed By >> 
     <a class="Mahmoud" href="https://www.instagram.com/hooooda_gabr_208/#">Mahmoud</a> &middot; 
-    <a class="Yusef" href="https://wsend.co/201030206896">Yusef</a>  
+    <a class="Yusef">Yusef</a>  
     <span>All Copy Rights Reserved @2025</span>
   </p>
 </footer>
